# ironlib

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  clean.sh  install.sh
include/: Makefile  errno.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h
include/baremetal/: syscalls.h
include/ironlib/: sstream.h  stream.h
make/: config.mk  patterns.mk
src/: Makefile  build.sh  clean.sh  mtable.c  stdio.c  stdlib.c  string.c
src/baremetal/: build.sh  clean.sh  mtable-test.c  mtable.h  syscalls-fake.c  syscalls.c
src/errno/: build.sh  clean.sh
src/ironlib/sstream/: init.c  set-buf.c
src/ironlib/stream/: init.c  printf.c  read.c  vprintf.c  write.c
src/stdio/: build.sh  clean.sh  puts.c  stdout.c
src/stdio/baremetal/: build.sh  clean.sh  disk.c  disk.h  fclose.c  feof.c  file.h  fopen.c  fread.c  fwrite.c
src/stdio/fake/: build.sh  fclose.c  feof.c  fopen.c  fread.c  fwrite.c
src/stdlib/: build.sh  clean.sh
src/stdlib/baremetal/: build.sh  free.c  malloc.c
src/stdlib/fake/: build.sh  clean.sh  free.c  malloc.c
src/string/: build.sh  clean.sh  memcmp.c  memcpy.c  memset.c  strcmp.c  strcpy.c  strlen.c
tests/: Makefile  printf-test  printf-test.c
travis-ci/: do-all-builds.bash  do-all-builds.sh  do-bash-build.bash  do-bash-build.sh  do-dash-build.sh  do-zsh-build.sh
utils/: Makefile  build.sh  clean.sh
